--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -2628,6 +2628,9 @@ html {
 .aspect-\[156\/87\] {
   aspect-ratio: 156/87;
 }
+.aspect-square {
+  aspect-ratio: 1 / 1;
+}
 .h-11 {
   height: 2.75rem;
 }
@@ -2636,6 +2639,9 @@ html {
 }
 .h-2 {
   height: 0.5rem;
+}
+.h-48 {
+  height: 12rem;
 }
 .h-\[174px\] {
   height: 174px;
@@ -3443,9 +3449,17 @@ html {
   --tw-text-opacity: 1;
   color: var(--fallback-bc,oklch(var(--bc)/var(--tw-text-opacity)));
 }
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 .text-primary {
   --tw-text-opacity: 1;
@@ -3662,6 +3676,10 @@ html {
     width: 320px;
   }
 
+  .md\:w-\[calc\(50\%-12px\)\] {
+    width: calc(50% - 12px);
+  }
+
   .md\:max-w-6xl {
     max-width: 72rem;
   }
@@ -3761,6 +3779,10 @@ html {
 
   .lg\:w-\[40\%\] {
     width: 40%;
+  }
+
+  .lg\:w-\[calc\(33\.333\%-16px\)\] {
+    width: calc(33.333% - 16px);
   }
 
   .lg\:w-full {
